# android-activity

./: .gitignore  .gitmodules  FONTS.md  GettingStarted.txt  README.md  XcodeInstructions.txt  add-webkit_dom_node_to_js.patch  addTimings  aeson.nix  android-activity.cabal  android-emulate  android_deps  build-backend  build-frontend  build-frontend-android-arch64  build-frontend-android-arm64  build-frontend-ghc  build-frontend-ghc-wkwebview  build-frontend-ios-aarch64  build-frontend-ios-sim  cache  changelog.md  create-amis.sh  default.nix  deploy  deploy-config  dev-env  dump-splices  extract-apk-hash  findBindsInCore.hs  focus-init  frontend-dump-splices  ghc.nix  ghci-backend  ghci-backend+common  ghci-backend-run  ghci-common  ghci-focus  ghci-frontend  ghci-tests  (+28 more)
aeson-orphans/: focus-aeson-orphans.cabal
aeson-orphans/src/Focus/Aeson/: Orphans.hs
android/: AndroidManifest.xml  default.nix  local.properties
android/res/layout/: main.xml
android/res/values/: strings.xml
android/src/com/example/android/focus/: focus.java
android/src/systems/obsidian/focus/: MainActivity.java
android/template/: AndroidManifest.xml  build.xml  local.properties
android/template/jni/: Android.mk  jsaddle-shim.c  jsaddle-shim.h
android/template/src/systems/obsidian/focus/: JSaddleShim.java  JSaddleStart.java  JSaddleWebViewClient.java  MainActivity.java  OverridenWebViewClient.java  ProcessJSaddleMessage.java
apnsworker/: apnsworker.cabal
apnsworker/src/PhonePush/IOS/: APNSWorker.hs
backend/: default.nix  focus-backend.cabal
backend/src/Backend/: Account.hs  DB.hs  Listen.hs  MonadEmail.hs  TH.hs
backend/src/Backend/Schema/: TH.hs
backend/src/Focus/: Backend.hs
backend/src/Focus/Backend/: Account.hs  Auth.hs  Brand.hs  DB.hs  Email.hs  EmailWorker.hs  Intercom.hs  Listen.hs  MonadEmail.hs  Mustache.hs  QueueWorker.hs  Route.hs  Schema.hs  Sign.hs  Snap.hs  Subscription.hs  TH.hs  Timezone.hs  Typeahead.hs
backend/src/Focus/Backend/DB/: Groundhog.hs  Local.hs  PsqlSimple.hs  Temp.hs
backend/src/Focus/Backend/HTTP/: Accept.hs
backend/src/Focus/Backend/Listen/: Session.hs
backend/src/Focus/Backend/Schema/: TH.hs
cbits/: HaskellActivity.c
cbits/include/: HaskellActivity.h
client/: default.nix  focus-client.cabal
client/src/Focus/: Client.hs
client/src/Focus/Client/: Types.hs
core/: default.nix  focus-core.cabal
core/src/Control/Monad/: TypedUnique.hs
core/src/Data/: Indexed.hs  Min.hs  RequestInterval.hs  SemiMap.hs  SortedPair.hs
core/src/Data/Indexed/: Projections.hs
core/src/Focus/: Account.hs  Api.hs  App.hs  AppendMap.hs  Brand.hs  Concurrent.hs  Email.hs  GoogleAnalytics.hs  HereMaps.hs  Highlight.hs  Intercom.hs  Lens.hs  Misc.hs  Patch.hs  Pretty.hs  Replaceable.hs  Request.hs  RightSignature.hs  Route.hs  Schema.hs  Sign.hs  Subscription.hs  TH.hs  Time.hs  WebSocket.hs
core/src/Focus/DB/: Temp.hs
core/src/Focus/Intercom/: Common.hs
core/src/Focus/RightSignature/: Common.hs
core/src/Focus/Schema/: Gitlab.hs  Pivotal.hs
core/src/Focus/Time/: Zone.hs
datastructures/: focus-datastructures.cabal
datastructures/src/Data/: AppendMap.hs  Cond.hs  Indexed.hs  SemiMap.hs  SortedPair.hs
datastructures/src/Focus/: AppendMap.hs
emails/: README.md  default.nix  gulpfile.babel.js  makeEmails  package.json  packages.generated.nix  src
emails-test/: .babelrc  README.md  default.nix  gulpfile.babel.js  gulpfile.js  node_modules  package.json  packages.generated.nix  src
gargoyle-nix/src/System/: Which.hs
gitlab/: focus-gitlab.cabal
gitlab/src/Focus/Gitlab/: Schema.hs
google-maps/: focus-google-maps.cabal
heremaps/: default.nix  email-parse.cabal  focus-heremaps.cabal
heremaps/src/Focus/: HereMaps.hs
heremaps/src/Focus/Backend/: HereMaps.hs
http/: default.nix  focus-http.cabal
http/src/Focus/HTTP/: Accept.hs  Serve.hs
intercom/: focus-intercom.cabal
java/systems/obsidian/: BluetoothLib.java  HaskellActivity.java  LocalFirebaseInstanceIDService.java  LocalFirebaseMessagingService.java
js/: default.nix  focus-js.cabal
js/src/Focus/JS/: Account.hs  AltInput.hs  App.hs  BaseJSInstances.hs  Bootstrap.hs  BoundingClientRect.hs  Chart.hs  Cookie.hs  DesktopNotification.hs  EmojiOne.hs  Env.hs  FileReader.hs  FontAwesome.hs  GoogleMap.hs  HTMLCollection.hs  Highlight.hs  Hotkeys.hs  ImageUpload.hs  Intercom.hs  Listen.hs  LocalStorage.hs  PreprocessedCSSClasses.hs  Prerender.hs  Pretty.hs  PrettyPrint.hs  README-FontAwesome.md  Request.hs  Route.hs  SmoothieCharts.hs  Stripe.hs  TextArea.hs  Time.hs  Transition.hs  WebSocket.hs  Widget.hs  Window.hs
js/src/Focus/JS/EmojiOne/: Internal.hs
jsaddle/: github.json
nixpkgs/: github.json
phonepush-worker/: focus-phonepush-worker.cabal
phonepush-worker/src/PhonePush/: Worker.hs
pivotal/: focus-pivotal.cabal
pivotal/src/Focus/Pivotal/: Schema.hs
reflex/: github.json
reflex-dom/: git.json  git.nix  github.json
reflex-platform/: github.json
script-env/: default.nix
simplify-tags/: simplify-tags.hs
snap-stream/: snap-stream.cabal
snap-stream/src/Snap/Util/FileServe/: Stream.hs
src/Android/: HaskellActivity.hsc
touch/: touch.cabal
touch/src/Focus/: Touch.hs
unique-id/: unique-id.cabal
unique-id/src/Focus/: UniqueId.hs
weblayouts/: focus-weblayouts.cabal
weblayouts-backend/: README-KISS.md  focus-weblayouts-backend.cabal
weblayouts-backend/src/Focus/Weblayouts/Backend/: KissBackend.hs
weblayouts/src/Focus/Weblayouts/: Kiss.hs  KissBackend.hs  style.css
weblayouts/src/Focus/Weblayouts/CSS/: style.css
