Name: focus-backend
Version: 0.1
Synopsis: Project Synopsis Here
Description: Project Description Here
License: AllRightsReserved
Author: Author
Maintainer: maintainer@example.com
Stability: Experimental
Category: Web
Build-type: Simple
Cabal-version: >=1.2

library
  hs-source-dirs: src

  build-depends:
    focus-core,
    focus-http,
    aeson,
    base,
    bytestring,
    containers,
    groundhog,
    groundhog-th,
    groundhog-postgresql,
    lens,
    loch-th,
    mtl,
    network,
    postgresql-simple,
    resource-pool,
    mime-mail,
    pwstore-fast,
    smtp-mail,
    snap,
    snap-core,
    stm,
    stripe,
    template-haskell,
    text,
    time,
    websockets,
    websockets-snap,
    monad-control,
    transformers-base,
    clientsession,
    transformers,
    semigroups,
    blaze-html,
    process,
    directory,
    temporary,
    stringsearch,
    shelly,
    monad-loops,
    unix,
    filepath,
    tar,
    file-embed,
    monad-logger,
    lucid,
    diagrams-lib,
    diagrams-svg,
    data-default,
    raw-strings-qq,
    attoparsec

  exposed-modules:
      Focus.Backend
    , Focus.Backend.Account
    , Focus.Backend.DB
    , Focus.Backend.Listen
    , Focus.Backend.Email
    , Focus.Backend.Schema.TH
    , Focus.Backend.Subscription
    , Focus.Backend.TH
    , Focus.Backend.Sign
    , Focus.Backend.DB.Temp
    , Focus.Backend.DB.Local
    , Focus.Backend.DB.Groundhog
    , Focus.Backend.Snap
    , Focus.Backend.Route
    , Focus.Backend.Brand

  other-extensions: TemplateHaskell
  ghc-options: -threaded -Wall -Werror -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto-calls -rtsopts
