Name: focus-client
Version: 0.1
Synopsis: client API for interacting with focus projects
Description: 
License: AllRightsReserved
Author: Author
Maintainer: maintainer@example.com
Stability: Experimental
Category: Web
Build-type: Simple
Cabal-version: >=1.2

library
  hs-source-dirs: src

  build-depends: base
               , focus-core
               , aeson
               , bytestring
               , containers
               , http-types
               , lens
               , loch-th
               , mtl
               , network
               , text
               , time
               , transformers
               , websockets

  exposed-modules: Focus.Client

  other-extensions: TemplateHaskell
  ghc-options: -threaded -Wall -Werror -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto-calls -rtsopts
