Name: focus-client
Version: 0.1
Synopsis: client API for interacting with focus projects
Description:
License: AllRightsReserved
Author: Author
Maintainer: maintainer@example.com
Stability: Experimental
Category: Web
Build-type: Simple
Cabal-version: >=1.2

library
  hs-source-dirs: src

  build-depends: base
               , focus-core
               , aeson
               , async
               , bytestring
               , containers
               , exceptions
               , http-types
               , lens
               , loch-th
               , mtl
               , network
               , semigroups
               , stm
               , text
               , time
               , transformers
               , websockets

  exposed-modules: Focus.Client
                 , Focus.Client.Types

  other-extensions: TemplateHaskell
  ghc-options: -threaded -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto-calls -rtsopts
