Name: focus-core
Version: 0.1
Synopsis: Project Synopsis Here
Description: Project Description Here
License: AllRightsReserved
Author: Author
Maintainer: maintainer@example.com
Stability: Experimental
Category: Web
Build-type: Simple
Cabal-version: >=1.2

library
  hs-source-dirs: src

  build-depends: base
               , aeson
               , async
               , attoparsec
               , base64-bytestring
               , bytestring
               , constraints
               , containers
               , data-default
               , dependent-map
               , dependent-sum
               , haskell-src-exts
               , lens
               , loch-th
               , mtl
               , network-uri
               , old-locale
               , reflex
               , semigroups
               , template-haskell
               , text
               , time
               , timezone-series
               , transformers
               , vector

  exposed-modules:
      Focus.Account
    , Focus.AppendMap
    , Focus.Api
    , Focus.Brand
    , Focus.Misc
    , Focus.Pretty
    , Focus.Request
    , Focus.Route
    , Focus.Schema
    , Focus.Time
    , Focus.Sign
    , Focus.Concurrent
    , Focus.WebSocket
    , Control.Monad.TypedUnique
    , Data.Indexed
    , Data.Indexed.Projections
    , Data.SortedPair
    , Data.Min
    , Data.RequestInterval
    , Focus.Patch
    , Focus.App
    , Focus.Lens
    , Focus.Highlight

  other-extensions: TemplateHaskell
  ghc-options: -threaded -Wall -Werror -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto-calls -rtsopts
