Name: focus-core
Version: 0.1
Synopsis: Project Synopsis Here
Description: Project Description Here
License: AllRightsReserved
Author: Author
Maintainer: maintainer@example.com
Stability: Experimental
Category: Web
Build-type: Simple
Cabal-version: >=1.2

library
  hs-source-dirs: src

  build-depends: base
               , aeson
               , aeson-compat
               , async
               , attoparsec
               , base64-bytestring
               , bytestring
               , constraints
               , containers
               , data-default
               , dependent-map
               , dependent-sum
               , haskell-src-exts
               , http-conduit
               , http-types
               , lens
               , loch-th
               , mtl
               , mime-mail
               , network-uri
               , old-locale
               , reflex
               , semigroups
               , template-haskell
               , text
               , these
               , time
               , timezone-series
               , transformers
               , vector
               , SHA

  exposed-modules:
      Focus.Account
    , Focus.AppendMap
    , Focus.Api
    , Focus.Brand
    , Focus.Email
    , Focus.Misc
    , Focus.Request
    , Focus.Route
    , Focus.Schema
    , Focus.Time
    , Focus.Sign
    , Focus.Concurrent
    , Focus.WebSocket
    , Control.Monad.TypedUnique
    , Data.Indexed
    , Data.Indexed.Projections
    , Data.SemiMap
    , Data.SortedPair
    , Data.Min
    , Data.RequestInterval
    , Focus.Patch
    , Focus.App
    , Focus.Lens
    , Focus.Highlight
    , Focus.GoogleAnalytics
    , Focus.Intercom
    , Focus.Intercom.Common
    , Focus.Schema.Gitlab
    , Focus.RightSignature
    , Focus.RightSignature.Common
    , Focus.Schema.Pivotal
    , Focus.HereMaps

  other-extensions: TemplateHaskell
  ghc-options: -threaded -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto-calls -rtsopts -fplugin=Reflex.Optimizer
