Name: focus-core
Version: 0.1
Synopsis: Project Synopsis Here
Description: Project Description Here
License: AllRightsReserved
Author: Author
Maintainer: maintainer@example.com
Stability: Experimental
Category: Web
Build-type: Simple
Cabal-version: >=1.2

flag frontend
  description: Building for the frontend
  default: True

library
  hs-source-dirs: src

  build-depends: base
               , aeson
               , aeson-compat
               , async
               , attoparsec
               , base64-bytestring
               , bytestring
               , constraints
               , containers
               , data-default
               , dependent-map
               , dependent-sum
               , directory-tree
               , focus-datastructures
               , haskell-src-exts
               , http-types
               , lens
               , loch-th
               , mtl
               , mime-mail
               , monad-control
               , network-uri
               , old-locale
               , reflex
               , semigroups
               , template-haskell
               , transformers-base
               , text
               , these
               , time
               , timezone-series
               , transformers
               , vector
               , SHA

  reexported-modules:
      Focus.AppendMap
    , Data.AppendMap
    , Data.Indexed
    , Data.Indexed.Projections
    , Data.SemiMap
    , Data.SortedPair
    , Data.Min

  exposed-modules:
      Focus.Account
    , Focus.Api
    , Focus.Brand
    , Focus.Email
    , Focus.Misc
    , Focus.Request
    , Focus.Route
    , Focus.Schema
    , Focus.Time
    , Focus.Time.Zone
    , Focus.Sign
    , Focus.Concurrent
    , Focus.WebSocket
    , Control.Monad.TypedUnique
    , Data.RequestInterval
    , Focus.Patch
    , Focus.App
    , Focus.Lens
    , Focus.Highlight
    , Focus.GoogleAnalytics
    , Focus.Intercom
    , Focus.Intercom.Common
    , Focus.Schema.Gitlab
    , Focus.RightSignature
    , Focus.RightSignature.Common
    , Focus.Schema.Pivotal
    , Focus.HereMaps

  if !os(ios)
    other-extensions: TemplateHaskell
    cpp-options: -DUSE_TEMPLATE_HASKELL
  if flag(frontend)
    cpp-options: -DFOCUS_FRONTEND
  else
    cpp-options: -DFOCUS_BACKEND
  ghc-options: -threaded -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto-calls -rtsopts -fexpose-all-unfoldings

