Name: focus-heremaps
Version: 0.1
Synopsis: Project Synopsis Here
Description: Project Description Here
License: AllRightsReserved
Author: Author
Maintainer: maintainer@example.com
Stability: Experimental
Category: Web
Build-type: Simple
Cabal-version: >=1.2

library
  hs-source-dirs: src
  build-depends: text
               , aeson
               , base
               , focus-core
               , time
               , http-conduit
  exposed-modules: Focus.HereMaps
                 , Focus.Backend.HereMaps

  ghc-options: -threaded -Wall -Werror -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto-calls -rtsopts
