Name: focus-intercom
Version: 0.1
Synopsis: Project Synopsis Here
Description: Project Description Here
License: AllRightsReserved
Author: Author
Maintainer: maintainer@example.com
Stability: Experimental
Category: Web
Build-type: Simple
Cabal-version: >=1.2

library
  hs-source-dirs: src

  if impl(ghcjs)
    build-depends: ghcjs-base

  build-depends:
    base,
    text,
    focus-js,
    focus-core,
    reflex,
    reflex-dom-core

  exposed-modules:
    Focus.JS.Intercom

  if os(ios)
    build-depends: jsaddle-wkwebview
  else
    if arch(x86_64)
      other-extensions: TemplateHaskell
      cpp-options: -DUSE_TEMPLATE_HASKELL
  ghc-options: -threaded -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto -rtsopts -fexpose-all-unfoldings
