Name: focus-js
Version: 0.1
Synopsis: Project Synopsis Here
Description: Project Description Here
License: AllRightsReserved
Author: Author
Maintainer: maintainer@example.com
Stability: Experimental
Category: Web
Build-type: Simple
Cabal-version: >=1.2

library
  hs-source-dirs: src

  build-depends:
    aeson,
    attoparsec,
    base,
    bifunctors,
    binary,
    bytestring,
    constraints,
    constraints,
    containers,
    cookie,
    data-default,
    data-default,
    dependent-map,
    dependent-map,
    dependent-sum,
    dependent-sum,
    exception-transformers,
    filepath,
    focus-core,
    focus-http-th,
    ghcjs-dom,
    http-types,
    lens,
    loch-th,
    mmorph,
    monad-control,
    mtl,
    mtl,
    prim-uniq,
    primitive,
    raw-strings-qq,
    ref-tf,
    reflex,
    reflex-dom,
    safe,
    safe,
    semigroups,
    template-haskell,
    text,
    these,
    time,
    timezone-olson,
    timezone-series,
    transformers,
    vector

  exposed-modules:
    Focus.JS.Account
    Focus.JS.AltInput
    Focus.JS.App
    Focus.JS.Bootstrap
    Focus.JS.Cookie
    Focus.JS.DesktopNotification
    Focus.JS.FontAwesome
    Focus.JS.GoogleMap
    Focus.JS.Highlight
    Focus.JS.Hotkeys
    Focus.JS.Intercom
    Focus.JS.Listen
    Focus.JS.LocalStorage
    Focus.JS.Prerender
    Focus.JS.Request
    Focus.JS.Route
    Focus.JS.SmoothieCharts
    Focus.JS.TextArea
    Focus.JS.Time
    Focus.JS.Transition
    Focus.JS.WebSocket
    Focus.JS.Widget
    Focus.JS.Window

  other-extensions: TemplateHaskell
  ghc-options: -threaded -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto-calls -rtsopts
