Name: focus-js
Version: 0.1
Synopsis: Project Synopsis Here
Description: Project Description Here
License: AllRightsReserved
Author: Author
Maintainer: maintainer@example.com
Stability: Experimental
Category: Web
Build-type: Simple
Cabal-version: >=1.2

library
  hs-source-dirs: src

  if impl(ghcjs)
    build-depends: ghcjs-base,
                   ghcjs-json

  build-depends:
    aeson,
    attoparsec,
    base,
    bifunctors,
    binary,
    bytestring,
    constraints,
    containers,
    cookie,
    data-default,
    dependent-map,
    dependent-sum,
    exception-transformers,
    filepath,
    focus-core,
    focus-http-th,
    ghcjs-dom,
    http-types,
    jsaddle,
    lens,
    mmorph,
    monad-control,
    mtl,
    prim-uniq,
    primitive,
    raw-strings-qq,
    ref-tf,
    reflex,
    reflex-dom-core,
    safe,
    safe,
    semigroups,
    template-haskell,
    text,
    these,
    time,
    timezone-olson,
    timezone-series,
    transformers,
    vector

  exposed-modules:
    Focus.JS.Account
    Focus.JS.AltInput
    Focus.JS.App
    Focus.JS.Bootstrap
    Focus.JS.Chart
    Focus.JS.Cookie
    Focus.JS.DesktopNotification
    Focus.JS.FontAwesome
    Focus.JS.Highlight
    Focus.JS.Hotkeys
    Focus.JS.Intercom
    Focus.JS.Listen
    Focus.JS.LocalStorage
    Focus.JS.Prerender
    Focus.JS.PreprocessedCSSClasses
    Focus.JS.Request
    Focus.JS.Route
    Focus.JS.SmoothieCharts
    Focus.JS.TextArea
    Focus.JS.Time
    Focus.JS.Transition
    Focus.JS.WebSocket
    Focus.JS.Widget
    Focus.JS.Window

  if os(ios)
    build-depends: jsaddle-wkwebview
  else
    if arch(x86_64)
      other-extensions: TemplateHaskell
      cpp-options: -DUSE_TEMPLATE_HASKELL
  ghc-options: -threaded -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto -rtsopts -fexpose-all-unfoldings
